--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant: Gerenciando maquinas virtuais.</li>
         <li>Docker: Criando conteiners sem dor de cabeça.</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software.</li>
+        <li>Kubernetes</li>
         <li></li>
     </ul>
 </body>
